# ctda-cpp

./: .gitignore  CMakeLists.txt  README.md
docs/: _config.yml  base_quantity.md  example.md  index.md  quantity.md  unit.md
docs/_site/: base_quantity.html  index.html  quantity.html  unit.html
docs/_site/assets/css/: just-the-docs-dark.css.map  just-the-docs-default.css.map  just-the-docs-light.css.map
docs/_site/assets/js/: just-the-docs.js  search-data.json
docs/_site/physics/units-and-measurements/: index.html
include/: ctda.hpp
src/: basis.hpp  io.hpp  traits.hpp  units.hpp
src/core/: base_quantity.hpp  measurement.hpp  quantity.hpp  unit.hpp
src/math/: operations.hpp  operators.hpp
src/math/algebraic/: add.hpp  invert.hpp  multiply.hpp  negate.hpp  power.hpp  root.hpp
tests/: CMakeLists.txt  andrea.cpp  math.cpp  measurement.cpp  quantity.cpp
